--- a/style.css
+++ b/style.css
@@ -31,23 +31,57 @@
     gap: 4px;
 }
 
+.search {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+.notification {
+    grid-row: 1;
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.user-info {
+    grid-row: 2;
+    grid-column: 1;
+    display: grid;
+    grid-template-columns: 0.1fr 0.2fr;
+}
+
+.user-info p {
+    grid-column: 2;
+}
+
+.user-info .icon {
+    grid-column: 1;
+}
+
+.share-buttons {
+    grid-row: 2;
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .sidebar {
     background-color: rgb(4, 120, 87);
     color: rgb(255, 255, 255);
     grid-column: 1;
     grid-row: 1/3;
     display: grid;
-    grid-template-rows: 100px 200px 100px;
+    grid-template-rows: 0.2fr 0.8fr 1fr;
 }
 
 .logo {
-    font-size: x-large;
+    font-size: xx-large;
     grid-row: 1;
 }
 
 .nav,
 .branding {
-    font-size: larger;
+    font-size: x-large;
 }
 
 .nav {
@@ -68,4 +102,8 @@
 
 ul {
     list-style: none;
+}
+
+li {
+    padding: 12px;
 }
