--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    gap: 4px;
 }
 
 .container div {
@@ -27,8 +28,7 @@
     grid-column: 2;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: 2fr 1fr;
-    gap: 4px;
+    grid-template-columns: 1.1fr 1fr;
 }
 
 .search {
@@ -71,7 +71,7 @@
     grid-column: 1;
     grid-row: 1/3;
     display: grid;
-    grid-template-rows: 0.2fr 0.8fr 1fr;
+    grid-template-rows: 0.2fr 0.9fr 1fr;
 }
 
 .logo {
@@ -94,10 +94,29 @@
 
 .main-content {
     background-color: rgb(197, 197, 197);
-    grid-column: 2;
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 4px;
+    grid-template-columns: 1.2fr 1fr;
+}
+
+.projects {
+    grid-row: 1/3;
+    grid-column: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    gap: 20px;
+}
+
+.projects .card {
+    background-color: rgb(255, 255, 255);
+    height: 200px;
+}
+
+.announce {
+    grid-column: 2;
+}
+
+.trends {
+    grid-column: 2;
 }
 
 ul {
