--- a/style.css
+++ b/style.css
@@ -71,14 +71,18 @@
     grid-column: 1;
     grid-row: 1/3;
     display: grid;
-    grid-template-rows: 0.2fr 0.9fr 1fr;
+    grid-template-rows: 0.3fr 0.9fr 1fr;
 }
 
 .logo {
     font-size: xx-large;
-    grid-row: 1;
 }
 
+.logo img {
+    max-width: 50px;
+    max-height: 50px;
+    filter: invert(100%);
+}
 .nav,
 .branding {
     font-size: x-large;
@@ -90,6 +94,13 @@
 
 .branding {
     grid-row: 3;
+}
+
+.sidebar .icon {
+    max-width: 30px;
+    max-height: 30px;
+    filter: invert(100%);
+    margin-right: 24px;
 }
 
 .main-content {
