--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@
 .container div {
     padding: 10px;
     font-family: "lato";
-    font-weight: bold;
 }
 .header {
     background-color: rgb(255, 255, 255);
+    font-weight: bold;
     color: rgb(0, 0, 0);
     grid-column: 2;
     display: grid;
@@ -41,8 +41,8 @@
 .search input {
     width: 600px;
     height: 25px;
-    background-color: rgb(210, 210, 210);
-    border: 1px solid #e5e7eb;
+    background-color: rgb(209, 250, 229);
+    border: 1px solid rgb(229, 235, 232);
     border-radius: 15px;
 }
 
@@ -116,6 +116,7 @@
 
 .sidebar {
     background-color: rgb(4, 120, 87);
+    font-weight: bold;
     color: rgb(255, 255, 255);
     grid-column: 1;
     grid-row: 1/3;
@@ -154,9 +155,14 @@
 }
 
 .main-content {
-    background-color: rgb(197, 197, 197);
+    background-color: rgb(209, 250, 229);
     display: grid;
     grid-template-columns: 1.2fr 1fr;
+}
+
+.main-content div {
+    font-size: large;
+    font-weight: bold;
 }
 
 .projects {
@@ -170,10 +176,47 @@
 .projects .card {
     background-color: rgb(255, 255, 255);
     height: 200px;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 0.2em rgb(133, 133, 133), -10px 0 rgb(248, 113, 113);
+    display: grid;
+    align-items: center;
+    align-content: end;
+    grid-template-rows: 50px 50px 100px;
+}
+
+.projects .title {
+    font-weight: bold;
+}
+
+.projects p {
+    font-weight: lighter;
+    max-height: 50px;
+}
+
+.projects .card div {
+    display: grid;
+    grid-template-columns: 50px 50px 50px;
+    justify-content: end;
+}
+
+.projects .icon {
+    margin-left: 30px;
+    margin-top: 30px;
+    max-width: 20px;
+    max-height: 20px;
 }
 
 .announce {
     grid-column: 2;
+}
+
+.announce .card {
+    background-color: rgb(255, 255, 255);
+    max-width: 250px;
+    border-radius: 5px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 .trends {
