--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@
     height: 200px;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 2px 2px 0.2em rgb(133, 133, 133), -10px 0 rgb(248, 113, 113);
+    box-shadow: 2px 2px 0.2em rgb(204, 204, 204), -10px 0 rgb(248, 113, 113);
     display: grid;
     align-items: center;
     align-content: end;
@@ -213,10 +213,28 @@
 
 .announce .card {
     background-color: rgb(255, 255, 255);
-    max-width: 250px;
-    border-radius: 5px;
+    max-width: 200px;
+    margin-bottom: 30px;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 0.3em rgb(204, 204, 204);
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
+}
+
+.announce div {
+    font-size: small;
+}
+
+.announce .title {
+    font-weight: bold;
+}
+.announce p {
+    font-weight: lighter;
+}
+
+.announce .middle {
+    box-shadow: 0px 1px rgb(211, 211, 211), 0px -1px rgb(211, 211, 211);
 }
 
 .trends {
