Add Trends grid layout, styles and icons

--- a/style.css
+++ b/style.css
@@ -157,12 +157,16 @@
 .main-content {
     background-color: rgb(209, 250, 229);
     display: grid;
-    grid-template-columns: 1.2fr 1fr;
+    grid-template-columns: 1.2fr 0.8fr;
 }
 
 .main-content div {
     font-size: large;
     font-weight: bold;
+}
+
+.main-content .right-bar {
+    margin-left: 15px;
 }
 
 .projects {
@@ -213,7 +217,7 @@
 
 .announce .card {
     background-color: rgb(255, 255, 255);
-    max-width: 200px;
+    max-width: 245px;
     margin-bottom: 30px;
     padding: 30px;
     border-radius: 15px;
@@ -234,11 +238,55 @@
 }
 
 .announce .middle {
-    box-shadow: 0px 1px rgb(211, 211, 211), 0px -1px rgb(211, 211, 211);
+    box-shadow: 0 1px rgb(211, 211, 211), 0 -1px rgb(211, 211, 211);
 }
 
 .trends {
     grid-column: 2;
+}
+
+.trends .card {
+    background-color: rgb(255, 255, 255);
+    width: 260px;
+    height: 350px;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 0.3em rgb(204, 204, 204);
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    align-items: center;
+}
+
+.trends div {
+    font-size: small;
+}
+
+.trends p {
+    font-weight: lighter;
+}
+
+.trend-icon {
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
+    align-items: center;
+}
+
+.trend-icon .pfp {
+    max-width: 40px;
+    max-height: 40px;
+    border-radius: 50%;
+}
+
+#trend1 {
+    background-color: rgb(126, 209, 230);
+}
+
+#trend2 {
+    background-color: rgb(235, 233, 150);
+}
+
+#trend4 {
+    background-color: rgb(82, 33, 214);
 }
 
 ul {
